fixing hero title owerflow wrap parameter

--- a/css/index.hero.partial.css
+++ b/css/index.hero.partial.css
@@ -43,6 +43,10 @@
   vertical-align: baseline;
 }
 
+.main__hero-text-content-title {
+  overflow-wrap: anywhere;
+}
+
 .main__hero-subtitle {
   box-sizing: border-box;
   display: inline;
@@ -65,6 +69,7 @@
 
   /* .main__hero-title {
     font-size: 3.75rem;
+    overflow-wrap: anywhere;
   } */
 
   .main__hero-subtitle {
@@ -88,6 +93,7 @@
 
   /* .main__hero-title {
     font-size: 4.6875rem;
+    overflow-wrap: anywhere;
   } */
 
   .main__hero-subtitle {
@@ -111,6 +117,7 @@
 
   /* .main__hero-title {
     font-size: 5.625rem;
+    overflow-wrap: anywhere;
   } */
 
   .main__hero-subtitle {
